<resources>
    <string name="app_name">Adopet</string>
    <string name="register_title">Buat Akun Anda</string>
    <string name="register_subtitle">Lengkapi Profil Anda</string>
    <string name="hint_username">Nama Pengguna</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Nomor Telepon</string>
    <string name="hint_kata_sandi">Kata Sandi</string>
    <string name="hint_register">Daftar</string>
    <string name="hint_sudah_punya_akun">Sudah punya Akun? Masuk</string>
    <string name="hint_belum_punya_akun">Belum punya Akun? Daftar</string>
    <string name="hint_login">Masuk</string>
    <string name="subtitle_login">Temukan hewan yang siap jadi bagian keluargamu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_detection">Deteksi</string>
    <string name="title_history">Riwayat</string>
    <string name="hint_welcome_user">Mau adopsi apa hari ini?</string>
    <string name="newest">Terbaru</string>
    <string name="camera_x">Langsung</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analisis</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="result">Hasil Analisis</string>
    <string name="no_text_recognized">No text recognized!</string>
    <string name="pet_breed_info">%s\n%s</string>
    <string name="pet_type">Jenis hewan: %s</string>
    <string name="pet_name">Nama hewan: %s</string>
    <string name="pet_age">Umur hewan: %s</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="call_pet_owner">Hubungi Pemilik</string>
    <string name="upload">Unggah</string>
    <string name="logout">Keluar</string>
    <string name="hint_detection">Gunakan pencahayaan yang cukup\ndan pastikan objek terlihat jelas.</string>
</resources>